change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lsretail/lsmag-two",
+  "name": "lsretail/lsmag-two-test",
   "description": "LS Ecommerce - Magento Integration",
   "type": "magento2-module",
   "license": "proprietary",
