--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "sabre/xml": "^1.5",
     "nabil1337/case-helper": "^0.1.0",
     "laminas/laminas-captcha": "^2.7.1",
-    "laminas/laminas-code": "~3.3.0",
+    "laminas/laminas-code": "^3.3.0",
     "laminas/laminas-config": "^2.6.0",
     "laminas/laminas-console": "^2.6.0",
     "laminas/laminas-crypt": "^2.6.0",
@@ -32,7 +32,7 @@
     "laminas/laminas-mail": "^2.9.0",
     "laminas/laminas-mime": "^2.5.0",
     "laminas/laminas-modulemanager": "^2.7",
-    "laminas/laminas-mvc": "~2.7.0",
+    "laminas/laminas-mvc": "^2.7.0",
     "laminas/laminas-serializer": "^2.7.2",
     "laminas/laminas-server": "^2.6.1",
     "laminas/laminas-servicemanager": "^2.7.8",
@@ -42,7 +42,7 @@
   "laminas/laminas-text": "^2.6.0",
     "laminas/laminas-uri": "^2.5.1",
     "laminas/laminas-validator": "^2.6.0",
-    "laminas/laminas-view": "~2.11.2"
+    "laminas/laminas-view": "^2.10.0"
   },
   "suggest": {
     "kiwicommerce/module-cron-scheduler" : "^1.0.5"
