--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   "laminas/laminas-text": "^2.6.0",
     "laminas/laminas-uri": "^2.5.1",
     "laminas/laminas-validator": "^2.6.0",
-    "laminas/laminas-view": "^2.10.0"
+    "laminas/laminas-view": "~2.10.0"
   },
   "suggest": {
     "kiwicommerce/module-cron-scheduler" : "^1.0.5"
