--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "laminas/laminas-db": "^2.8.2",
     "laminas/laminas-dependency-plugin": "^1.0",
     "laminas/laminas-di": "^2.6.1",
-    "laminas/laminas-eventmanager": "^2.6.0",
+    "laminas/laminas-eventmanager": "^2.6.2 || ^3.0",
     "laminas/laminas-feed": "^2.9.0",
     "laminas/laminas-form": "^2.10.0",
     "laminas/laminas-http": "^2.6.0",
