--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "sabre/xml": "^1.5",
     "nabil1337/case-helper": "^0.1.0",
     "laminas/laminas-captcha": "^2.7.1",
-    "laminas/laminas-code": "^3.3.0",
+    "laminas/laminas-code": "~3.3.0 || ~3.4",
     "laminas/laminas-config": "^2.6.0",
     "laminas/laminas-console": "^2.6.0",
     "laminas/laminas-crypt": "^2.6.0",
@@ -38,11 +38,11 @@
     "laminas/laminas-servicemanager": "^2.7.8",
     "laminas/laminas-session": "^2.7.3",
     "laminas/laminas-soap": "^2.7.0",
-    "laminas/laminas-stdlib": "^2.7.7",
-  "laminas/laminas-text": "^2.6.0",
+    "laminas/laminas-stdlib": "^2.7.7 || ^3.0",
+    "laminas/laminas-text": "^2.6.0",
     "laminas/laminas-uri": "^2.5.1",
     "laminas/laminas-validator": "^2.6.0",
-    "laminas/laminas-view": "~2.10.0"
+    "laminas/laminas-view": "~2.10.0 || ~2.11.2"
   },
   "suggest": {
     "kiwicommerce/module-cron-scheduler" : "^1.0.5"
