--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
   "suggest": {
     "kiwicommerce/module-cron-scheduler" : "^1.0.5"
   },
+  "conflict": {
+        "laminas/laminas-mvc": "*"
+  },
   "autoload": {
     "psr-4": {
       "Ls\\Core\\": "src/Core/",
